# peercove

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  about.hbs  about.toml  deny.toml  dl.crate
.github/: dependabot.yml
.github/workflows/: ci.yml
apps/peercove-android/: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
apps/peercove-android/app/: build.gradle.kts
apps/peercove-android/app/src/main/: AndroidManifest.xml
apps/peercove-android/app/src/main/java/app/peercove/android/: AppState.kt  ChatNotifier.kt  ChatScreen.kt  FileUtil.kt  Holidays.kt  MainActivity.kt  MarkdownPreview.kt  MemoCommentNotifier.kt  MemoScreen.kt  NetworkScreen.kt  PeercoveTileService.kt  PeercoveVpnService.kt  PortraitCaptureActivity.kt  Prefs.kt  QualityLog.kt  Reminder.kt  ScheduleScreen.kt  ShareScreen.kt  SharedMemoScreen.kt  SharedRefs.kt  SheetScreen.kt
apps/peercove-android/app/src/main/res/drawable/: ic_tile.xml
apps/peercove-android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
apps/peercove-android/app/src/main/res/values/: colors.xml  strings.xml
apps/peercove-android/app/src/main/res/xml/: file_paths.xml
apps/peercove-ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/peercove-ui/scripts/: make-icon.mjs
apps/peercove-ui/src/: App.tsx  chat.ts  history.ts  holidays.ts  ipc.ts  main.tsx  memoLinks.ts  mentions.ts  notify.ts  prefs.ts  sharedRefs.ts  styles.css  theme.ts  update.ts
apps/peercove-ui/src-tauri/: Cargo.toml  tauri.conf.json
apps/peercove-ui/src-tauri/capabilities/: default.json
apps/peercove-ui/src-tauri/icons/: icon.icns
apps/peercove-ui/src-tauri/linux/: peercove.desktop
apps/peercove-ui/src-tauri/src/: dto.rs  lib.rs  linkmeta.rs  main.rs  tray.rs  update.rs
apps/peercove-ui/src-tauri/windows/: daemon-service.wxs  wix-ja-JP.wxl
apps/peercove-ui/src/components/: AclDialog.tsx  Avatar.tsx  BackupView.tsx  ChatPanel.tsx  ContextMenu.tsx  DiagnosticsView.tsx  DnsDialog.tsx  InviteDialog.tsx  LogsDialog.tsx  MemoView.tsx  MentionSuggest.tsx  Modal.tsx  NetworksView.tsx  PrefsDialog.tsx  QualityView.tsx  ReminderButton.tsx  ScheduleView.tsx  SettingsDialog.tsx  SharedHubView.tsx  SharedMemoView.tsx  SheetView.tsx  Sparkline.tsx  StartView.tsx  SubnetDialog.tsx  TunnelView.tsx
apps/peercove-ui/src/i18n/: index.ts  ja.tsx
crates/peercove-cli/: Cargo.toml
crates/peercove-cli/src/: chat.rs  control.rs  daemon.rs  direct.rs  dns.rs  dnscfg.rs  groups.rs  health.rs  logbuf.rs  main.rs  memoshare.rs  msg.rs  quality.rs  rotate.rs  service.rs  upnp.rs
crates/peercove-cli/src/backend/: linux.rs  mock.rs  mod.rs
crates/peercove-cli/src/backend/windows/: device.rs  mod.rs
crates/peercove-cli/src/commands/: add_peer.rs  init.rs  invite.rs  join.rs  send_file.rs  status.rs  tunnel.rs  udp.rs
crates/peercove-core/: Cargo.toml
crates/peercove-core/src/: acl.rs  config.rs  diagnostics.rs  dns.rs  ipalloc.rs  ipc.rs  keys.rs  lib.rs  memo.rs  msg.rs  names.rs  proto.rs  quality.rs  schedule.rs  sheet.rs  token.rs
crates/peercove-ipc/: Cargo.toml
crates/peercove-ipc/src/: lib.rs
crates/peercove-memo/: Cargo.toml
crates/peercove-memo/src/: lib.rs  shared.rs
crates/peercove-mobile/: Cargo.toml
crates/peercove-mobile/src/: chatlog.rs  engine.rs  groups.rs  lib.rs  memo.rs  session.rs  tun_fd.rs
crates/peercove-ops/: Cargo.toml
crates/peercove-ops/src/: acl.rs  backup.rs  dns.rs  init.rs  invite.rs  join.rs  keyfiles.rs  lib.rs  net.rs  networks.rs  peers.rs  secret.rs  settings.rs
crates/peercove-poc/: Cargo.toml
crates/peercove-poc/src/: chat.rs  control.rs  daemon.rs  direct.rs  dns.rs  groups.rs  logbuf.rs  main.rs  msg.rs  service.rs  upnp.rs
crates/peercove-poc/src/backend/: linux.rs  mock.rs  mod.rs
crates/peercove-poc/src/backend/windows/: device.rs  mod.rs
crates/peercove-poc/src/commands/: add_peer.rs  chat.rs  init.rs  invite.rs  join.rs  keygen.rs  mod.rs  remove_peer.rs  send_file.rs  status.rs  tunnel.rs
docs/: decisions.md  development.md  m0-report-template.md  peercove-g7-packaging-handoff.md  peercove-g7b-msi-review-for-fable.md  peercove-m2-handoff.md  peercove-m3-14c-instructions-for-opus.md  roadmap.md  user-guide.md  verification.md
docs/feature-plans/: 2026-07-14-vpn-operations.md  README.md
docs/history/: README.md  m0-report-template.md  memo-feature-requirements.md  peercove-m0-handoff.md  peercove-m2-handoff.md
examples/: host.example.toml  member.example.toml
packaging/: README-portable.md  collect-npm-licenses.mjs  make-notices.sh  make-tar.sh  make-zip.ps1
packaging/deb/: postinst.sh  postrm.sh  prerm.sh
packaging/licenses/: README.md
packaging/systemd/: peercove-daemon.service
