[workspace]
resolver = "2"
members = [
    "crates/peercove-core",
    "crates/peercove-ipc",
    "crates/peercove-ops",
    "crates/peercove-poc",
]
# UI(Tauri)は独自ワークスペース。ここに含めると cargo test/clippy が
# WebView・フロントエンドのビルドに巻き込まれ、開発ループが重くなるため
exclude = ["apps"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
peercove-core = { path = "crates/peercove-core" }
peercove-ipc = { path = "crates/peercove-ipc" }
peercove-ops = { path = "crates/peercove-ops" }

anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
ipnet = { version = "2", features = ["serde"] }
base64 = "0.22"
x25519-dalek = { version = "2", features = ["static_secrets"] }
rand_core = { version = "0.6", features = ["getrandom"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "signal", "sync", "io-util"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
