[package]
name = "peercove-cli"
description = "PeerCove CLI / デーモン"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "peercove"
path = "src/main.rs"

[dependencies]
peercove-core.workspace = true
peercove-ipc.workspace = true
peercove-ops.workspace = true
# 個人メモのストレージ(ADR-0049、M5 F-1)。デーモンがメモ DB を所有する
peercove-memo.workspace = true

anyhow.workspace = true
clap.workspace = true
# fs はファイル転送(ADR-0015、M3-9)の受信ボックス書き込みで使う
tokio = { workspace = true, features = ["fs"] }
tracing.workspace = true
tracing-subscriber.workspace = true
ipnet.workspace = true
toml.workspace = true
igd-next = "0.17"
fast_qr = "0.13.1"
serde.workspace = true
serde_json.workspace = true
toml_edit = "0.25.12"
# ファイル転送の完全性検証(ADR-0015、M3-9)。RustCrypto、活発にメンテされている
sha2 = "0.10"

[target.'cfg(target_os = "windows")'.dependencies]
wintun = "0.5"
boringtun = "0.7"
# UDP ソケットバッファの明示設定(C-3。std にはセッターが無い)
socket2 = "0.6"
# デーモンの Windows サービス化(M2-G7、ADR-0010)。Mullvad 製・同用途で実績あり
windows-service = "0.8"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Time",
] }

[target.'cfg(target_os = "linux")'.dependencies]
defguard_wireguard_rs = "0.10"
libc = "0.2"
