[package]
name = "peercove-core"
description = "PeerCove OS 非依存コア(鍵・設定型・IP 割当)"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
toml.workspace = true
ipnet.workspace = true
base64.workspace = true
x25519-dalek.workspace = true
rand_core.workspace = true

[dev-dependencies]
serde_json = "1.0.150"
