[package]
name = "peercove-ipc"
description = "PeerCove デーモン制御 IPC のクライアント(UI / CLI 共用)"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
peercove-core.workspace = true

anyhow.workspace = true
tokio.workspace = true
serde_json.workspace = true
tracing.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"
