[package]
name = "peercove-memo"
description = "PeerCove のメモ帳ストレージ(SQLite、ADR-0049)"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
peercove-core = { workspace = true }
# SQLite 同梱ビルド(ADR-0049。FTS5 は bundled で有効)。0.40.1 = 2026-06、MIT
# functions: かな折り畳み(ひらがな/カタカナ同一視)の SQL 関数登録に使う
rusqlite = { version = "0.40", features = ["bundled", "functions"] }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3"
