# PeerCove モバイル用コア(M4、ADR-0039)。
# Android アプリ(apps/peercove-android)へ UniFFI で公開する。
# cdylib は Android 向け .so のため。ホストでは通常の lib としてテストする。

[package]
name = "peercove-mobile"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
crate-type = ["lib", "cdylib"]

# Kotlin バインディング生成用(uniffi のライブラリモード)。
# 使い方: cargo run -p peercove-mobile --bin uniffi-bindgen -- generate --library <so> --language kotlin --out-dir <dir>
[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[dependencies]
peercove-core = { workspace = true }
peercove-ops = { workspace = true }
uniffi = { version = "0.31", features = ["cli"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
ipnet = { workspace = true }
# "log" フィーチャで tracing イベントを log crate へ転送(Android では
# android_logger が拾って logcat に出す)
tracing = { workspace = true, features = ["log"] }
# デスクトップの Windows デバイス(ADR-0001)と同じ WG プロトコル実装
boringtun = "0.7"
serde = { workspace = true }
serde_json = { workspace = true }
# ファイル転送の SHA-256 検証(ADR-0015、デスクトップと同じ)
sha2 = "0.10"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15"
log = "0.4"

[dev-dependencies]
rand_core = { workspace = true }
