[package]
name = "peercove-ops"
description = "PeerCove の設定ファイル操作(init / invite / join / メンバー管理)。CLI と UI が共用"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
peercove-core.workspace = true

anyhow.workspace = true
ipnet.workspace = true
toml.workspace = true
toml_edit = "0.25"
tracing.workspace = true
