[package]
name = "peercove-ops"
description = "PeerCove の設定ファイル操作(init / invite / join / メンバー管理)。CLI と UI が共用"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
peercove-core.workspace = true

anyhow.workspace = true
ipnet.workspace = true
toml.workspace = true
toml_edit = "0.25"
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
rand_core.workspace = true
argon2.workspace = true
chacha20poly1305.workspace = true
zeroize.workspace = true
