[package]
name = "peercove-poc"
description = "PeerCove M0 技術検証 CLI"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
peercove-core.workspace = true

anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ipnet.workspace = true
toml.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
wintun = "0.5"
boringtun = "0.7"

[target.'cfg(target_os = "linux")'.dependencies]
defguard_wireguard_rs = "0.10"
libc = "0.2"
