[package]
name = "peercove-poc"
description = "PeerCove M0 技術検証 CLI"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
peercove-core.workspace = true
peercove-ipc.workspace = true

anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ipnet.workspace = true
toml.workspace = true
igd-next = "0.17"
fast_qr = "0.13.1"
serde_json.workspace = true
toml_edit = "0.25.12"

[target.'cfg(target_os = "windows")'.dependencies]
wintun = "0.5"
boringtun = "0.7"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
] }

[target.'cfg(target_os = "linux")'.dependencies]
defguard_wireguard_rs = "0.10"
libc = "0.2"
