[package]
name = "peercove-ui"
description = "PeerCove デスクトップ UI(M2)"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

# ルートのワークスペースから独立させる。ここを member にすると
# `cargo test --workspace` が WebView とフロントエンドのビルドに
# 巻き込まれ、開発ループが重くなるため(ルート Cargo.toml の exclude と対)。
[workspace]

[lib]
name = "peercove_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
peercove-core = { path = "../../../crates/peercove-core" }
peercove-ipc = { path = "../../../crates/peercove-ipc" }
peercove-ops = { path = "../../../crates/peercove-ops" }

tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
fast_qr = { version = "0.13", features = ["svg"] }
