[package]
name = "peercove-ui"
description = "PeerCove デスクトップ UI(M2)"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

# ルートのワークスペースから独立させる。ここを member にすると
# `cargo test --workspace` が WebView とフロントエンドのビルドに
# 巻き込まれ、開発ループが重くなるため(ルート Cargo.toml の exclude と対)。
[workspace]

[lib]
name = "peercove_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
peercove-core = { path = "../../../crates/peercove-core" }
peercove-ipc = { path = "../../../crates/peercove-ipc" }
peercove-ops = { path = "../../../crates/peercove-ops" }

# tray-icon: トレイ常駐(M2-G6)。Linux のビルドには libayatana-appindicator3-dev が要る
# image-png: トレイアイコンを icons/32x32.png から読むため
# protocol-asset: チャットのインラインプレビュー(画像・動画をローカルパスから表示)
tauri = { version = "2", features = ["tray-icon", "image-png", "protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
# 招待ディープリンク(M3-5): peercove:// スキーム。single-instance は
# 二重起動時の URL を既存インスタンスへ転送するため deep-link feature 付き
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
# トレイメニューの定期更新(M3-6)。tauri の async ランタイムは tokio なので time だけ足す
tokio = { version = "1", features = ["time"] }
ipnet = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
fast_qr = { version = "0.13", features = ["svg"] }
